Оптимизация механизма запуска тестов.
Добавлен параметр конфигурации для расчета списка тестов силами BSL Language Server. По умолчанию ищутся все методы с аннотацией "Тест". Механизм включен по умолчанию.
Добавлен параметр конфигурации для задания списка каталогов, в которых располагаются тесты.